# fin-trade-craft

./: .gitignore  =10.0.0  AUTOMATED_TRADING_SYSTEM.md  CASH_FLOW_NEW_DATA_VERIFICATION_COMPLETE.md  CASH_FLOW_SCHEMA_MIGRATION_COMPLETE.md  CLEANUP_PLAN.md  DAILY_EXECUTION_ORDER.md  DATABASE_MIGRATION.md  DATABASE_SAFETY_GUIDELINES.md  DCS_IMPLEMENTATION.md  DELISTING_LOGIC_SUMMARY.py  QUARTERLY_GAP_ISSUE_RESOLVED.md  QUARTERLY_GAP_TEST_RESULTS.md  README.md  SIGNAL_TRIGGERS_EXPLAINED.md  TRADING_BOT_SETUP.md  activate.bat  analyze_failed_extractions.py  analyze_financial_statement_coverage.py  analyze_iteration_limit.py  analyze_priority_ranking.py  analyze_quarterly_gaps.py  analyze_recent_failures.py  analyze_repeated_processing.py  analyze_rolling_behavior.py  apply_quarterly_gap_fix.py  central_screening_architecture.py  check_class_a_fundamentals.py  check_constraints.py  check_economic_indicators_schema.py  check_etl_duplicates.py  check_feature_tables.py  check_inactive_symbols.py  check_incremental_needs.py  check_not_null_columns.py  check_oric_data.py  check_oric_detailed.py  check_pg_watermarks.py  check_schema.py  check_schema_structure.py  (+93 more)
.github/: copilot-instructions.md
archive/: add_python_context_menu.reg  backup_database.py  check_columns.py  check_data_types.py  check_economic_indicators.py  check_json_sizes.py  check_migration_validity.py  check_schema.py  cleanup_economic_indicators.py  complete_migration.py  database_manager.py  extract_earnings_call_transcripts_legacy.py  extract_historical_options.py  find_good_symbols.py  fix_numeric_overflow.py  fix_overflow_final.py  fixed_migration.py  get_db_info.py  migrate_listing_status.py  restore_database.py  test_pg_connection.py  transform_base.py  update_listing_status.py  verify_transformation.py
backtesting/: backtest_strategies.py  create_top25_viz_input.py  daily_signal_scorer.py  filter_trades_by_prediction.py  join_fundamentals_to_trades.py  strategy_performance_filtered_80pct.csv  strategy_performance_filtered_90pct.csv  strategy_performance_filtered_90pct_last90days.csv  strategy_performance_report.csv  strategy_performance_with_cooldown.csv  trade_success_predictor.py  trades_filtered_80pct.csv  trades_filtered_90pct.csv  trades_filtered_90pct_last90days.csv  visualize_signals.py  visualize_signals_with_indicators.py
charts/: plot_candlesticks.py
copilot_test_scripts/: alpha_vantage_options_data_evaluation.md  check_economic_constraints.py  check_insider_status.py  check_schema.py  check_table_counts.py  check_time_series_table.py  debug_table_exists.py  test_schema.py  (+21 more)
(+174 files in other folders)
