[project]
name = "fin-trade-craft"
version = "0.1.0"
description = "Environment for monorepository fin-trade-craft"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Ken Moore", email = "ken.r.moore@gmail.com"},
]
dependencies = [
    "exchange_calendars>=4.10.1",
    "numpy>=1.23.0",
    "pandas>=2.0.0",
    "pandas_ta>=0.3.14b0",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "ta>=0.10.2",
    "tabulate>=0.9.0",
    "urllib3>=1.26.5",
    "pyarrow>=21.0.0",
    "sqlalchemy>=2.0.43",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.ruff]
# Same as Black.
line-length = 88
# Assume Python 3.13.
target-version = "py313"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "RET", "SIM", "ARG", "PTH", "PD", "PL"]
ignore = [
    "E501",  # Line too long (handled by black)
    "PD901", # Avoid `df` as a variable name (common in data science)
    "PLR2004", # Magic value used in comparison (acceptable for dates/quarters)
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Ignore import organization in __init__.py files
"__init__.py" = ["F401"]
# Allow print statements in scripts
"**/extract_*.py" = ["T20"]
"test_*.py" = ["T20"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.3",
]
